Fixed content overlap issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1135,7 +1135,7 @@ h6 {
   z-index: 998; }
 
 #main-content {
-  //padding-left: 107px;
+  padding-left: 107px;
   -moz-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -ms-transition: all 0.5s;
